--- a/src/app/modules/home/homepage/homepage.component.html
+++ b/src/app/modules/home/homepage/homepage.component.html
@@ -7,6 +7,11 @@
         </div>
     </section>
     <section class="section-2" id="about-us">
-        
+        <div class="container about">
+            <div class="h3 text-center">
+                GA-auto е платформа за наемане и отдаване на превозни средства, където гостите могат да резервират всеки автомобил в удобно за тях време и място. Гостите избират от широка гама коли, докато домакините печелят допълнителни пари.
+            Офисът ни за справки се намира в град Горна Оряховица, но винаги можете да се свържете онлайн с нас на e-mail georgi@mail.com или на номер 0888-333-444.
+            </div>
+        </div>
     </section>
 </div>
