--- a/src/app/modules/vehicles/car-details/car-details.component.scss
+++ b/src/app/modules/vehicles/car-details/car-details.component.scss
@@ -34,7 +34,7 @@
 
 .secondary-info{
     position: relative;
-    z-index: 10;
+    // z-index: 10;
     // height: 100px;
     background-color: white;
     padding: 5px 20px;
