--- a/src/app/core/authentication/authentication.component.html
+++ b/src/app/core/authentication/authentication.component.html
@@ -1,14 +1,14 @@
 <div [@bgImgTrigger]="component">
     <div class="modal-header">
-        <h4 class="modal-title pull-left">{{title}}</h4>
+        <h4 class="modal-title pull-left">{{title | translate}}</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">    
         <app-login *ngIf="component == 'login'" (close)="closeModal($event)"></app-login>
-        <p *ngIf="component == 'login'" class="message text-center">Нямате профил? <a (click)="switchComponent()">Регистрирайте се тук</a></p>
+        <p *ngIf="component == 'login'" class="message text-center">{{ 'HOME.AUTH.NO_PROFILE'|translate }} <a (click)="switchComponent()">{{ 'HOME.AUTH.REGISTER_HERE'|translate }}</a></p>
         <app-registration *ngIf="component == 'registration'" (close)="closeModal($event)"></app-registration>
-        <p *ngIf="component == 'registration'" class="message text-center">Имате профил? <a (click)="switchComponent()">Влезте от тук</a></p>
+        <p *ngIf="component == 'registration'" class="message text-center">{{ 'HOME.AUTH.HAVE_PROFILE'|translate }} <a (click)="switchComponent()">{{ 'HOME.AUTH.LOGIN_HERE'|translate }}</a></p>
     </div>
 </div>
