--- a/src/app/modules/user/settings/settings.component.scss
+++ b/src/app/modules/user/settings/settings.component.scss
@@ -10,3 +10,32 @@
     overflow: hidden;
     z-index: -1;
 }
+
+.pics{
+    height: 320px
+}
+
+.profile-pic{
+    cursor: pointer;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 300px;
+    box-shadow: 0 0 14px rgb(153, 153, 153);
+}
+
+.current-pic{
+    z-index: 10;
+}
+
+.change-pic{
+    cursor: pointer;
+    position: absolute;
+    margin-top: -40px;
+    height: 40px;
+    width: 300px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.605);
+}
