--- a/src/app/modules/vehicles/cars-list/cars-list-item/cars-list-item.component.html
+++ b/src/app/modules/vehicles/cars-list/cars-list-item/cars-list-item.component.html
@@ -3,7 +3,7 @@
 <div class="car-card" (click)="openCarDetails()">
     <!-- [routerLink]="'/cars/'+car.id" -->
     <div class="car-price">
-        <i class="fas fa-tag custom-green"></i><span class="h5">{{ car.price | number:'1.0-0' }}лв</span>/ден
+        <i class="fas fa-tag custom-green"></i><span class="h5">{{ car.price | number:'1.0-0' }}{{'COMMON.LV'|translate}}</span>/{{'COMMON.DAY'|translate}}
     </div>
     <!-- <div class="car-fav" (click)="addToFavourites(car.id)" *ngIf="currentUser"> -->
         <div class="car-fav" (click)="addToFavourites(car.id);$event.stopPropagation()" *ngIf="currentUser">
@@ -26,7 +26,7 @@
                 <i class="fas fa-map-marker-alt text-primary" style="font-size: 1rem"></i> {{ car.city }}
             </div>
             <div class="col-6 text-right times-rented">
-                {{ car.times_rented }} наемателя
+                {{ car.times_rented }} {{'CARS.DETAILS.RENTERS'|translate}}
             </div>
         </div>
         <!-- <div class="row">
@@ -39,7 +39,7 @@
         </div> -->
         <div class="row mt-2 text-left">
             <div class="col-6 pr-0">
-                <i class="fas fa-burn"> </i> <span class="car-second-info"> {{ car.consumption }}л/100км</span>
+                <i class="fas fa-burn"> </i> <span class="car-second-info"> {{ car.consumption }}{{'CARS.DETAILS.CONSUMPTION'|translate}}</span>
             </div>
             <div class="col-6 pr-0"> 
                 <i class="fas fa-gas-pump custom-green"></i> <span class="car-second-info"> {{ car.engine_type }}</span>
@@ -50,13 +50,13 @@
         </div>
         <div class="row mt-1 text-left">
             <div class="col-6 pr-0">
-                <img src="assets/images/horsepower.png" class="car-icon" alt=""> <span class="car-second-info"> {{ car.horsepower }} к.с.</span>
+                <img src="assets/images/horsepower.png" class="car-icon" alt=""> <span class="car-second-info"> {{ car.horsepower }} {{'CARS.DETAILS.HORSEPOWERS'|translate}}</span>
             </div>
             <!-- <div class="col-4 pr-0"> 
                 <i class="fas fa-car"></i> <span class="car-second-info"> {{ car.category | convertCategory }}</span>
             </div> -->
             <div class="col-6 pr-0">
-                <img src="assets/images/seat.png" class="car-icon" alt=""> <span class="car-second-info"> {{ car.seats }} места</span>
+                <img src="assets/images/seat.png" class="car-icon" alt=""> <span class="car-second-info"> {{ car.seats }} {{'CARS.DETAILS.SEATS'|translate}}</span>
             </div>
         </div>
     </div>
