--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -52,7 +52,7 @@
           class="nav-link dropdown-toggle waves-light"
           mdbWavesEffect
         >
-          Хостинг
+        {{ 'NAVBAR.HOSTING'|translate }}
         </a>
         <ul
           id="dropdown-basic"
@@ -63,12 +63,12 @@
         >
           <li role="menuitem">
             <a class="dropdown-item" [routerLink]="['host/add-new']"
-              ><i class="fas fa-plus"></i> Добави кола</a
+              ><i class="fas fa-plus"></i> {{ 'NAVBAR.ADD_CAR'|translate }}</a
             >
           </li>
           <li role="menuitem" *ngIf="currentUser.cars_owned.length">
             <a class="dropdown-item" [routerLink]="['host/manage-cars']">
-              <mdb-icon fas icon="cog"></mdb-icon> Моите коли
+              <mdb-icon fas icon="cog"></mdb-icon> {{ 'NAVBAR.MY_CARS'|translate }}
             </a>
           </li>
           <!-- <li role="menuitem"><a class="dropdown-item" [routerLink]="['login']" (click)="authService.logoutUser()"><i class="fas fa-sign-out-alt"></i><span class="text-right"> Log Out</span></a></li> -->
@@ -79,7 +79,7 @@
         </a>
       </li> -->
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" [routerLink]="['user/reservations']">Резервации </a>
+        <a class="nav-link" [routerLink]="['user/reservations']">{{ 'NAVBAR.RESERVATIONS'|translate }}</a>
       </li>
       <div class="btn-group nav-item" dropdown>
         <a
@@ -107,11 +107,11 @@
           aria-labelledby="button-basic"
         >
           <li role="menuitem" [routerLink]="['user/favourites']">
-            <a class="dropdown-item"> <i class="fas fa-list-ul"></i> Любими</a>
+            <a class="dropdown-item"> <i class="fas fa-list-ul"></i> {{ 'NAVBAR.FAVOURITES'|translate }}</a>
           </li>
           <li role="menuitem" [routerLink]="['user/settings']">
             <a class="dropdown-item">
-              <mdb-icon fas icon="cog"></mdb-icon> Настройки
+              <mdb-icon fas icon="cog"></mdb-icon> {{ 'NAVBAR.SETTINGS'|translate }}
             </a>
           </li>
           <!-- <li role="menuitem" (click)="printInfo()"><a class="dropdown-item">
@@ -121,7 +121,7 @@
           <li role="menuitem">
             <a class="dropdown-item" (click)="authService.logoutUser()"
               ><i class="fas fa-sign-out-alt"></i
-              ><span class="text-right"> Изход</span></a
+              ><span class="text-right"> {{ 'NAVBAR.LOGOUT'|translate }}</span></a
             >
           </li>
         </ul>
